--- a/lib/README
+++ b/lib/README
@@ -1,3 +1,9 @@
+LightShow (condensing neopixel routines)  Currently UNUSED
+WaveForms (contains special effects modules used by LightShow) Currently UNUSED
+
+
+---
+## BoilerPlate
 
 This directory is intended for project specific (private) libraries.
 PlatformIO will compile them to static libraries and link into executable file.
@@ -6,7 +12,7 @@ The source code of each library should be placed in a an own separate directory
 ("lib/your_library_name/[here are source files]").
 
 For example, see a structure of the following two libraries `Foo` and `Bar`:
-
+```
 |--lib
 |  |
 |  |--Bar
@@ -26,11 +32,12 @@ For example, see a structure of the following two libraries `Foo` and `Bar`:
 |- platformio.ini
 |--src
    |- main.c
+```
 
 and a contents of `src/main.c`:
 ```
-#include <Foo.h>
-#include <Bar.h>
+#include "Foo.h"
+#include "Bar.h"
 
 int main (void)
 {
